--- a/AluraPlus/index.html
+++ b/AluraPlus/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR"><!--Lucio-->
+<html lang="pt-BR">
 <head>
     <title>Alura Plus</title>
     <meta charset="UTF-8">
